# AIAutomationFramework

./: .dockerignore  .env.example  .gitignore  Jenkinsfile  README.md  docker-compose.yml  global_variables.py  mypy.ini  pet_store_api_call.py  pyproject.toml  pytest.ini  requirements.txt
.github/agents/: CodeReviewAgent.md  GitAgent.md  JiraAgent.md  TestGenerationAgent.md
.github/prompts/: code-review.prompt.md  generate-automation-tests.prompt.md  git-operations.prompt.md  test-design.prompt.md
.github/workflows/: pr-gate.yml
ci/: Dockerfile.jenkins  README.md  base.Dockerfile  docker-compose.yml  test.Dockerfile
contexts/architecture_context_docs/: allure_reporting.md  component_pattern.md  fixtures.md  page_object_model.md  pytest_hooks.md  test_generation.md  test_organization.md
contexts/product_context_docs/: README.md  TEMPLATE.md  pet_store.md  pet_store_authorization.md  pet_store_pet.md  pet_store_store.md  pet_store_user.md  saucedemo_cart_page.md  saucedemo_checkout_page.md  saucedemo_hamburger_menu.md  saucedemo_inventory_page.md  saucedemo_login_page.md
core/: __init__.py
core/controllers/: pet_store_controller.py
core/schemas/: pet_store_login.py  pet_store_pet.py  pet_store_user_creation.py
core/web/: base_page.py  consts.py
core/web/components/: hamburger_menu.py
core/web/pages/: cart_page.py  inventory_page.py  login_page.py  sauce_demo.py
mcp_server/: test_context_server.py  test_generation_server.py  xray_server.py
mcp_server/rag_db/133916d615608660/: chroma.sqlite3
mcp_server/rag_db/3ee32f59eaa863dd/: chroma.sqlite3
mcp_server/rag_db/44676dfdcbc8218b/: chroma.sqlite3
mcp_server/rag_db/502d55b43e27f335/: chroma.sqlite3
mcp_server/rag_db/562b7d5f93a9b9b6/: chroma.sqlite3
mcp_server/rag_db/86a58648df84cc6a/: chroma.sqlite3
mcp_server/rag_db/8c8bb20f56b3a132/: chroma.sqlite3
mcp_server/rag_db/8f4c97f1eceaac17/: chroma.sqlite3
mcp_server/rag_db/a68840212bc362d9/: chroma.sqlite3
mcp_server/rag_db/a87ac099d346efe0/: chroma.sqlite3
mcp_server/rag_db/b6347807f6c74731/: chroma.sqlite3
mcp_server/rag_db/c7d81fcd2058f965/: chroma.sqlite3
mcp_server/rag_db/c8c63cfa9b9b3324/: chroma.sqlite3
mcp_server/rag_db/cb13aad988a9d838/: chroma.sqlite3
mcp_server/rag_db/f7d92ed3f6e50a29/: chroma.sqlite3
mcp_server/utility/: __init__.py  ai_models.py
plugins/: reporter.py  reporter.pyi  xray.py
rag_engine/: rag.py
tests/: conftest.py  test_cart_page.py  test_inventory_page.py
tests/pet_store_api/: __init__.py  conftest.py  test_pet_store_pet.py  test_pet_store_user.py
tests/sauce_ui/: test_cart_page.py  test_inventory_page.py  test_login_page.py
tmp/: __init__.py
