[project]
name = "ai-automation-framework"
version = "0.1.0"
description = "AI-Driven Automation Infrastructure with Agentic AI, RAG, and MCP"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # Core Testing Framework
    "pytest>=8.4.0",
    "pytest-playwright>=0.7.0",
    
    # Environment & Configuration
    "python-dotenv>=1.0.0",
    
    # MCP Server
    "fastmcp>=2.12.0",
    
    # AI & RAG - Core
    "langchain-core>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-ollama>=1.0.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=1.1.0",
    
    # AI & RAG - Future Use (Google Gemini integration)
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.8.0",
    "google-genai>=1.45.0",
    
    # Data Validation
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "mcp_server", "rag_engine", "tests"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
